...
        let method = AWXPaymentMethodType()
        method.name = name
        method.transactionMode = session.transactionMode()
        method.resources = AWXResources()
        switch name {
        case AWXApplePayKey:
            method.displayName = NSLocalizedString("Apple Pay", bundle: .paymentSheet.language(language), comment: "")
        case AWXCardKey:
            method.displayName = NSLocalizedString("Card", bundle: .paymentSheet.language(language), comment: "")
            var brands = supportedCardBrands ?? AWXCardBrand.allAvailable
            // Maestro is offered wherever Mastercard is supported.
            if brands.contains(.mastercard) && !brands.contains(.maestro) {
                brands.append(.maestro)
...
