...

- (void)viewDidLoad
{
    [super viewDidLoad];
    self.totalLabel.text = self.total.string;
    self.items = @[@{@"title": @"Shipping", @"placeholder": @"Enter shipping information"},
                   @{@"title": @"Payment", @"placeholder": @"Select payment method"}];
    self.paymentMethod = [AWPaymentMethod new];
    self.paymentMethod.type = @"card";
    AWCard *card = [AWCard new];
    card.number = @"4012000300001003";
    card.name = @"";
    card.expYear = @"23";
...
