...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                            </textView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lrq-4F-IWe" customClass="ActionButton" customModule="ExampleSwift" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="36" width="361" height="33"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Check out">
                                                    <color key="titleColor" systemColor="linkColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="didTapSubmitButtonWithSender:" destination="YlU-EZ-l6c" eventType="touchUpInside" id="dz8-II-ZzH"/>
                                                </connections>
                                            </button>
...
