...
        view.translatesAutoresizingMaskIntoConstraints = false
        view.addTarget(self, action: #selector(lowLevelAPIButtonTapped), for: .touchUpInside)
        return view
    }()

    private lazy var html5DemoButton: UIButton = {
        let view = AWXButton(style: .secondary, title: "Integrate with HTML5 DEMO")
        view.translatesAutoresizingMaskIntoConstraints = false
        view.addTarget(self, action: #selector(html5DemoButtonTapped), for: .touchUpInside)
        return view
    }()
    
    private lazy var WeChatDemoButton: UIButton = {
...
